chore: update packaging and zip configs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "triggerTaskOnSave.tasks": {
-    "pyro: Compile Project (WhereAreYou.ppj)": [
+    "pyro: Compile Project (kxWhereAreYou.ppj)": [
       "*.psc",
     ],
   }
