--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,12 +3,12 @@
     "tasks": [
         {
             "type": "pyro",
-            "projectFile": "WhereAreYou.ppj",
+            "projectFile": "kxWhereAreYou.ppj",
             "gamePath": "D:\\Modding\\Skyrim\\Wabbajack\\Modlists\\ADT\\Game Root\\",
             "problemMatcher": [
                 "$PapyrusCompiler"
             ],
-            "label": "pyro: Compile Project (WhereAreYou.ppj)",
+            "label": "pyro: Compile Project (kxWhereAreYou.ppj)",
             "group": {
                 "kind": "build",
                 "isDefault": true
