feat: add Lua support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,12 @@
     "pyro: Compile Project (kxWhereAreYou.ppj)": [
       "*.psc",
     ],
-  }
+  },
+  "Lua.runtime.version": "Lua 5.1",
+  "Lua.diagnostics.globals": [
+    "bit",
+    "jrequire",
+    "JArray",
+    "JDB"
+  ]
 }
