--- a/MCM/Config/kxWhereAreYou/settings.ini
+++ b/MCM/Config/kxWhereAreYou/settings.ini
@@ -22,6 +22,12 @@ bShowDoFavor = 1
 [Search]
 uMaxResultCount = 10
 bSortResults = 1
+sEntryFormat = [name]|[refid]~[mod]
+
+[Track]
+bAlwaysActivateQuest = 1
+bNotifyOnDeath = 1
+bRemoveTrackingOnDeath = 1
 
 [Teleport]
 fRange = 100.0
@@ -54,7 +60,7 @@ bDoFavorShiftKey = 0
 bDoFavorAltKey = 0
 
 [Colors]
-rDefaultColor = 128,61,13
+sDefaultColor = FF0000
 
 [Icons]
 sStatsIcon = default_book_read
