feat: add auto prid on console as optional command

--- a/MCM/Config/kxWhereAreYou/settings.ini
+++ b/MCM/Config/kxWhereAreYou/settings.ini
@@ -19,6 +19,9 @@ bShowClone = 1
 bShowTrack = 1
 bShowDoFavor = 1
 
+[Console]
+bAutoPickByRefId = 0
+
 [Search]
 uMaxResultCount = 10
 bSortResults = 1
