--- a/MCM/Config/kxWhereAreYou/config.json
+++ b/MCM/Config/kxWhereAreYou/config.json
@@ -77,6 +77,22 @@
           }
         },
         {
+          "type": "empty"
+        },
+        {
+          "type": "header",
+          "text": "Console"
+        },
+        {
+          "id": "bAutoPickByRefId:Console",
+          "type": "toggle",
+          "text": "Select NPC found on console",
+          "help": "Set the NPC found as the object reference on console window.\nRequires ConsoleUtilSSE when enabled.",
+          "valueOptions": {
+            "sourceType": "ModSettingBool"
+          }
+        },
+        {
           "type": "header",
           "text": "Track/Untrack",
           "position": 1
@@ -535,7 +551,7 @@
           "id": "bEnabled:Debug",
           "type": "toggle",
           "text": "Debug mode",
-          "help": "Enable/disable debug mode",
+          "help": "Enable/disable debug mode.\nRequires ConsoleUtilSSE when enabled.",
           "valueOptions": {
             "sourceType": "ModSettingBool"
           }
@@ -604,15 +620,15 @@
         },
         {
           "type": "text",
-          "text": "PapyrusUtil SE"
-        },
-        {
-          "type": "text",
           "text": "UIExtensions"
         },
         {
           "type": "text",
           "text": "JContainers"
+        },
+        {
+          "type": "text",
+          "text": "*ConsoleUtilSSE"
         }
       ]
     }
