--- a/MCM/Config/kxWhereAreYou/settings.ini
+++ b/MCM/Config/kxWhereAreYou/settings.ini
@@ -8,7 +8,8 @@
 bEnabled = 1
 bKeepTrackingWhenDisabled = 0
 
-[CommandWheel]
+[Commands]
+uVisualizationType = 0
 bKeepOpened = 0
 bShowStats = 1
 bShowTeleport = 1
@@ -53,10 +54,10 @@ uSearchKey = 61
 bSearchCtrlKey = 0
 bSearchShiftKey = 0
 bSearchAltKey = 0
-uCommandWheelKey = -1
-bCommandWheelCtrlKey = 0
-bCommandWheelShiftKey = 0
-bCommandWheelAltKey = 0
+uCommandsKey = -1
+bCommandsCtrlKey = 0
+bCommandsShiftKey = 0
+bCommandsAltKey = 0
 uDoFavorKey = -1
 bDoFavorCtrlKey = 0
 bDoFavorShiftKey = 0
