--- a/MCM/Config/kxWhereAreYou/settings.ini
+++ b/MCM/Config/kxWhereAreYou/settings.ini
@@ -12,6 +12,7 @@ bKeepTrackingWhenDisabled = 0
 uVisualizationType = 0
 bKeepOpened = 0
 bShowStats = 1
+bShowInfo = 1
 bShowTeleport = 1
 bShowVisit = 1
 bShowDelete = 1
@@ -68,6 +69,7 @@ sDefaultColor = FF0000
 
 [Icons]
 sStatsIcon = default_book_read
+sInfoIcon = cat_favorites
 sTeleportIcon = book_map
 sVisitIcon = armor_feet
 sDeleteIcon = misc_remains
