--- a/MCM/Config/kxWhereAreYou/settings.ini
+++ b/MCM/Config/kxWhereAreYou/settings.ini
@@ -27,6 +27,7 @@ bAutoPickByRefId = 0
 uMaxResultCount = 10
 bSortResults = 1
 sEntryFormat = [name]|[refid]~[mod]
+bUseRegex = 0
 
 [Track]
 bAlwaysActivateQuest = 1
