--- a/MCM/Config/kxWhereAreYou/config.json
+++ b/MCM/Config/kxWhereAreYou/config.json
@@ -138,22 +138,6 @@
         },
         {
           "type": "header",
-          "text": "Delete"
-        },
-        {
-          "id": "bOnlyClones:Delete",
-          "type": "toggle",
-          "text": "Only clones",
-          "help": "Only show delete option to cloned NPCs",
-          "valueOptions": {
-            "sourceType": "ModSettingBool"
-          }
-        },
-        {
-          "type": "empty"
-        },
-        {
-          "type": "header",
           "text": "Do favor"
         },
         {
@@ -401,28 +385,10 @@
           }
         },
         {
-          "id": "sDeleteIcon:Icons",
-          "type": "input",
-          "text": "Delete",
-          "help": "Delete icon.\nOnly available for wheel as visualization type.",
-          "valueOptions": {
-            "sourceType": "ModSettingString"
-          }
-        },
-        {
           "id": "sInventoryIcon:Icons",
           "type": "input",
           "text": "Inventory",
           "help": "Inventory icon.\nOnly available for wheel as visualization type.",
-          "valueOptions": {
-            "sourceType": "ModSettingString"
-          }
-        },
-        {
-          "id": "sCloneIcon:Icons",
-          "type": "input",
-          "text": "Clone",
-          "help": "Clone icon.\nOnly available for wheel as visualization type.",
           "valueOptions": {
             "sourceType": "ModSettingString"
           }
@@ -454,7 +420,7 @@
           "id": "sEntryFormat:Search",
           "type": "input",
           "text": "List format",
-          "help": "How every line on the result search list should look like\nAvailable variables: [name], [mod], [race], [gender], [refid], [baseid], [clone] and [tracking]",
+          "help": "How every line on the result search list should look like\nAvailable variables: [name], [mod], [race], [gender], [refid], [baseid] and [location]",
           "valueOptions": {
             "sourceType": "ModSettingString"
           }
@@ -503,28 +469,10 @@
           }
         },
         {
-          "id": "bShowDelete:Commands",
-          "type": "toggle",
-          "text": "Show Delete",
-          "help": "Show Delete option on commands.",
-          "valueOptions": {
-            "sourceType": "ModSettingBool"
-          }
-        },
-        {
           "id": "bShowInventory:Commands",
           "type": "toggle",
           "text": "Show Inventory",
           "help": "Show Inventory option on commands.",
-          "valueOptions": {
-            "sourceType": "ModSettingBool"
-          }
-        },
-        {
-          "id": "bShowClone:Commands",
-          "type": "toggle",
-          "text": "Show Clone",
-          "help": "Show Clone option on commands.",
           "valueOptions": {
             "sourceType": "ModSettingBool"
           }
