--- a/MCM/Config/kxWhereAreYou/settings.ini
+++ b/MCM/Config/kxWhereAreYou/settings.ini
@@ -12,6 +12,7 @@ uVisualizationType = 0
 bKeepOpened = 0
 bShowStats = 1
 bShowInfo = 1
+bShowEnableDisable = 1
 bShowTeleport = 1
 bShowVisit = 1
 bShowInventory = 1
@@ -65,6 +66,7 @@ sDefaultColor = FF0000
 [Icons]
 sStatsIcon = default_book_read
 sInfoIcon = cat_favorites
+sEnableDisableIcon = mag_powers
 sTeleportIcon = book_map
 sVisitIcon = armor_feet
 sInventoryIcon = inv_all
