fix: remove .pdb copy from release build

--- a/MCM/Config/kxWhereAreYou/settings.ini
+++ b/MCM/Config/kxWhereAreYou/settings.ini
@@ -1,8 +1,8 @@
 ; Default values for "Where Are You?" MCM settings
 ; DO NOT MODIFY THIS FILE
 ; Any changes made to this file will be lost when updating
-; An overriden file will be automatically generated at Data\MCM\Settings\kxWhereAreYou.ini when you interact with the mod's MCM menu.
-; You can also create/update the overriden file manually.
+; An override file will be automatically generated at Data\MCM\Settings\kxWhereAreYou.ini when you interact with the mod's MCM menu.
+; You can also create/update the override file manually.
 
 [System]
 bEnabled = 1
